@@ -1,6 +1,8 @@
 2013-06-10  6.8.6-0 Cristy  <quetzlzacatenango@image...>
   * Clone image->intensity in CloneImageProperties() (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23569).
+  * Split test suite into smaller tests (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23577).
 
 2013-06-05  6.8.5-10 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.5-10, SVN revision 12419.
